--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -156,6 +156,7 @@ services:
 #      - "traefik.http.middlewares.features.headers.addvaryheader=true"
 #    networks:
 #      - traefik_default
+
   vue:
     image: fils/grow-general:latest
     environment:
@@ -165,13 +166,16 @@ services:
       - DOMAIN=https://dev.${HOST:?HOST environment varaible is required}/
       - S3KEY=AKIAIOSFODNN7EXAMPLE
       - S3SECRET=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+      - NODE_ENV=staging
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.vue.entrypoints=http"
+      - "traefik.http.routers.vue.priority=10"
       - "traefik.http.routers.vue.rule=Host(`dev.${HOST:?HOST environment varaible is required}`)"
       - "traefik.http.middlewares.vue-https-redirect.redirectscheme.scheme=https"
-      - "traefik.http.routers.vue.middlewares=features-https-redirect"
+      - "traefik.http.routers.vue.middlewares=vue-https-redirect"
       - "traefik.http.routers.vue-secure.entrypoints=https"
+      - "traefik.http.routers.vue-secure.priority=11"
       - "traefik.http.routers.vue-secure.rule=Host(`dev.${HOST:?HOST environment is required}`)"
       - "traefik.http.routers.vue-secure.tls=true"
       - "traefik.http.routers.vue-secure.tls.certresolver=http"
@@ -228,12 +232,12 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.alpha-server.entrypoints=http"
       - "traefik.http.routers.alpha-server.priority=90"
-      - "traefik.http.routers.alpha-server.rule=Host(`alpha.${HOST:?HOST environment variable is required}`) && PathPrefix(`/ec/api`)"
+      - "traefik.http.routers.alpha-server.rule=( Host(`alpha.${HOST:?HOST environment variable is required}`) || Host(`dev.${HOST:?HOST environment variable is required}`) ) && PathPrefix(`/ec/api`)"
       - "traefik.http.middlewares.alpha-server-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.alpha-server.middlewares=alpha-server-https-redirect"
       - "traefik.http.routers.alpha-server-secure.priority=91"
       - "traefik.http.routers.alpha-server-secure.entrypoints=https"
-      - "traefik.http.routers.alpha-server-secure.rule=Host(`alpha.${HOST:?HOST environment is required}`) && PathPrefix(`/ec/api`)"
+      - "traefik.http.routers.alpha-server-secure.rule=( Host(`alpha.${HOST:?HOST environment variable is required}`) || Host(`dev.${HOST:?HOST environment variable is required}`) ) && PathPrefix(`/ec/api`)"
       - "traefik.http.routers.alpha-server-secure.tls=true"
       - "traefik.http.routers.alpha-server-secure.tls.certresolver=http"
       - "traefik.http.routers.alpha-server-secure.service=alpha-server"
@@ -248,7 +252,7 @@ services:
     networks:
       - traefik_default
   vue-client:
-    image: nsfearthcube/ec_facets_client:latest
+    image: nsfearthcube/ec_facets_client
     #build: ./client
     environment:
       - NODE_ENV=production
