--- a/dev-compose.yaml
+++ b/dev-compose.yaml
@@ -3,7 +3,6 @@ services:
   traefik:
     image: traefik:v2.0.2
     container_name: traefik
-    restart: unless-stopped
     security_opt:
       - no-new-privileges:true
     networks:
@@ -32,7 +31,6 @@ services:
   triplestore:
     image: nawer/blazegraph
     #image: metaphacts/blazegraph-basic
-    restart: unless-stopped
     environment:
       JAVA_XMS: 1024m
       JAVA_XMX: 2g
@@ -63,7 +61,6 @@ services:
       - traefik_default
   s3system:
     image: minio/minio:latest
-    restart: unless-stopped
     ports:
       - 9000:9000
     labels:
@@ -82,14 +79,13 @@ services:
     volumes:
       - /data/s3/Data:/data
     environment:
-      - MINIO_ACCESS_KEY=${S3KEY}
-      - MINIO_SECRET_KEY=${S3SECRET}
+      - MINIO_ACCESS_KEY=`${S3KEY}`
+      - MINIO_SECRET_KEY=`${S3SECRET}`
     networks:
       - traefik_default
     command: ["server", "/data"]
   mercantile:
     image: fils/mercantile:latest
-    restart: unless-stopped
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.mercantile.entrypoints=http"
@@ -114,68 +110,21 @@ services:
     networks:
       - traefik_default
 
-  koop:
-    image: fils/koop:1.0
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.koop.entrypoints=http"
-      - "traefik.http.routers.koop.rule=Host(`spatial.${HOST:?HOST environment varaible is required}`)"
-      - "traefik.http.middlewares.koop-https-redirect.redirectscheme.scheme=https"
-      - "traefik.http.routers.koop.middlewares=koop-https-redirect"
-      - "traefik.http.routers.koop-secure.entrypoints=https"
-      - "traefik.http.routers.koop-secure.rule=Host(`spatial.${HOST:?HOST environment varaible is required}`)"
-      - "traefik.http.routers.koop-secure.tls=true"
-      - "traefik.http.routers.koop-secure.tls.certresolver=http"
-      - "traefik.http.routers.koop-secure.service=koop"
-      - "traefik.http.services.koop.loadbalancer.server.port=9000"
-      - "traefik.docker.network=traefik_default"
-    networks:
-      - traefik_default
-#  features:
-#    image: fils/grow-general:latest
-#    environment:
-#      - S3ADDRESS=s3system:9000
-#      - S3BUCKET=sites
-#      - S3PREFIX=alpha
-#      - DOMAIN=https://alpha.${HOST:?HOST environment varaible is required}/
-#      - S3KEY=AKIAIOSFODNN7EXAMPLE
-#      - S3SECRET=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
-#    labels:
-#      - "traefik.enable=true"
-#      - "traefik.http.routers.features.entrypoints=http"
-#      - "traefik.http.routers.features.rule=Host(`alpha.${HOST:?HOST environment varaible is required}`)"
-#      - "traefik.http.middlewares.features-https-redirect.redirectscheme.scheme=https"
-#      - "traefik.http.routers.features.middlewares=features-https-redirect"
-#      - "traefik.http.routers.features-secure.entrypoints=https"
-#      - "traefik.http.routers.features-secure.rule=Host(`alpha.${HOST:?HOST environment varaible is required}`)"
-#      - "traefik.http.routers.features-secure.tls=true"
-#      - "traefik.http.routers.features-secure.tls.certresolver=http"
-#      - "traefik.http.routers.features-secure.service=features"
-#      - "traefik.http.services.features.loadbalancer.server.port=8080"
-#      - "traefik.docker.network=traefik_default"
-#      - "traefik.http.middlewares.features.headers.accesscontrolallowmethods=GET,OPTIONS,PUT,POST"
-#      - "traefik.http.middlewares.features.headers.accesscontrolalloworigin=*"
-#      - "traefik.http.middlewares.features.headers.accesscontrolmaxage=100"
-#      - "traefik.http.middlewares.features.headers.addvaryheader=true"
-#    networks:
-#      - traefik_default
-
   vue:
     image: fils/grow-general:latest
-    restart: unless-stopped
     environment:
       - S3ADDRESS=s3system:9000
       - S3BUCKET=sites
       - S3PREFIX=vue
-      - DOMAIN=https://dev.${HOST:?HOST environment varaible is required}/
-      - S3KEY=${S3KEY}
-      - S3SECRET=${S3SECRET}
-      - NODE_ENV=staging
+      - DOMAIN=https://${HOST:?HOST environment varaible is required}/
+      - S3KEY=`${S3KEY}`
+      - S3SECRET=`${S3SECRET}`
+      - NODE_ENV=${NODE_ENV}
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.vue.entrypoints=http"
       - "traefik.http.routers.vue.priority=10"
-      - "traefik.http.routers.vue.rule=Host(`dev.${HOST:?HOST environment varaible is required}`)"
+      - "traefik.http.routers.vue.rule=Host(`${HOST:?HOST environment varaible is required}`)"
       - "traefik.http.middlewares.vue-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.vue.middlewares=vue-https-redirect"
       - "traefik.http.routers.vue-secure.entrypoints=https"
@@ -192,57 +141,28 @@ services:
       - "traefik.http.middlewares.vue.headers.addvaryheader=true"
     networks:
       - traefik_default
-#  beta:
-#    image: fils/grow-general:latest
-#    environment:
-#      - S3ADDRESS=s3system:9000
-#      - S3BUCKET=sites
-#      - S3PREFIX=beta
-#      - DOMAIN=https://beta.${HOST:?HOST environment varaible is required}/
-#      - S3KEY=AKIAIOSFODNN7EXAMPLE
-#      - S3SECRET=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
-#    labels:
-#      - "traefik.enable=true"
-#      - "traefik.http.routers.beta.entrypoints=http"
-#      - "traefik.http.routers.beta.rule=Host(`beta.${HOST:?HOST environment varaible is required}`)"
-#      - "traefik.http.middlewares.beta-https-redirect.redirectscheme.scheme=https"
-#      - "traefik.http.routers.beta.middlewares=beta-https-redirect"
-#      - "traefik.http.routers.beta-secure.entrypoints=https"
-#      - "traefik.http.routers.beta-secure.rule=Host(`beta.${HOST:?HOST environment is required}`)"
-#      - "traefik.http.routers.beta-secure.tls=true"
-#      - "traefik.http.routers.beta-secure.tls.certresolver=http"
-#      - "traefik.http.routers.beta-secure.service=beta"
-#      - "traefik.http.services.beta.loadbalancer.server.port=8080"
-#      - "traefik.docker.network=traefik_default"
-#      - "traefik.http.middlewares.beta.headers.accesscontrolallowmethods=GET,OPTIONS,POST"
-#      - "traefik.http.middlewares.beta.headers.accesscontrolalloworigin=*"
-#      - "traefik.http.middlewares.beta.headers.accesscontrolmaxage=100"
-#      - "traefik.http.middlewares.beta.headers.addvaryheader=true"
-#    networks:
-#      - traefik_default
 
-  vue-services-alpha:
+  vue-services:
     image: nsfearthcube/ec_facets_api_nodejs:latest
-    restart: unless-stopped
     #build: ./server
     environment:
       - NODE_ENV=production
       - S3ADDRESS=s3system:9000
       - S3BUCKET=sites
       - S3PREFIX=alpha
-      - DOMAIN=https://alpha.${HOST:?HOST environment varaible is required}/
-      - S3KEY=${S3KEY}
-      - S3SECRET=${S3SECRET}
+      - DOMAIN=https://${HOST:?HOST environment varaible is required}/
+      - S3KEY=`${S3KEY}`
+      - S3SECRET=`${S3SECRET}`
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.alpha-server.entrypoints=http"
       - "traefik.http.routers.alpha-server.priority=90"
-      - "traefik.http.routers.alpha-server.rule=( Host(`alpha.${HOST:?HOST environment variable is required}`) || Host(`dev.${HOST:?HOST environment variable is required}`) ) && PathPrefix(`/ec/api`)"
+      - "traefik.http.routers.alpha-server.rule=( Host(`${HOST:?HOST environment variable is required}`) || Host(`dev.${HOST:?HOST environment variable is required}`) ) && PathPrefix(`/ec/api`)"
       - "traefik.http.middlewares.alpha-server-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.alpha-server.middlewares=alpha-server-https-redirect"
       - "traefik.http.routers.alpha-server-secure.priority=91"
       - "traefik.http.routers.alpha-server-secure.entrypoints=https"
-      - "traefik.http.routers.alpha-server-secure.rule=( Host(`alpha.${HOST:?HOST environment variable is required}`) || Host(`dev.${HOST:?HOST environment variable is required}`) ) && PathPrefix(`/ec/api`)"
+      - "traefik.http.routers.alpha-server-secure.rule=( Host(`${HOST:?HOST environment variable is required}`) || Host(`dev.${HOST:?HOST environment variable is required}`) ) && PathPrefix(`/ec/api`)"
       - "traefik.http.routers.alpha-server-secure.tls=true"
       - "traefik.http.routers.alpha-server-secure.tls.certresolver=http"
       - "traefik.http.routers.alpha-server-secure.service=alpha-server"
@@ -261,18 +181,18 @@ services:
     restart: unless-stopped
     #build: ./client
     environment:
-      - NODE_ENV=production
-      - DOMAIN=https://alpha.${HOST:?HOST environment varaible is required}/
+      - NODE_ENV=${NODE_ENV}
+      - DOMAIN=https://${HOST:?HOST environment varaible is required}/
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.alpha.entrypoints=http"
       - "traefik.http.routers.alpha.priority=10"
-      - "traefik.http.routers.alpha.rule=Host(`alpha.${HOST:?HOST environment varaible is required}`)"
+      - "traefik.http.routers.alpha.rule=Host(`${HOST:?HOST environment varaible is required}`)"
       - "traefik.http.middlewares.alpha-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.alpha.middlewares=alpha-https-redirect"
       - "traefik.http.routers.alpha-secure.priority=11"
       - "traefik.http.routers.alpha-secure.entrypoints=https"
-      - "traefik.http.routers.alpha-secure.rule=Host(`alpha.${HOST:?HOST environment is required}`)"
+      - "traefik.http.routers.alpha-secure.rule=Host(`${HOST:?HOST environment is required}`)"
       - "traefik.http.routers.alpha-secure.tls=true"
       - "traefik.http.routers.alpha-secure.tls.certresolver=http"
       - "traefik.http.routers.alpha-secure.service=alpha"
@@ -293,14 +213,14 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.sparqlgui.entrypoints=http"
       - "traefik.http.routers.sparqlgui.priority=92"
-      - "traefik.http.routers.sparqlgui.rule=Host(`alpha.${HOST:?HOST environment varaible is required}` ) && PathPrefix(`/sparqlgui`) "
+      - "traefik.http.routers.sparqlgui.rule=Host(`${HOST:?HOST environment varaible is required}` ) && PathPrefix(`/sparqlgui`) "
       #      - "traefik.http.routers.alpha.rule=Host(`${HOST:?HOST environment varaible is required}`) "
       - "traefik.http.routers.sparqlgui.service=sparqlgui"
       - "traefik.http.middlewares.sparqlgui-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.sparqlgui.middlewares=sparqlgui-https-redirect"
       - "traefik.http.routers.sparqlgui-secure.priority=94"
       - "traefik.http.routers.sparqlgui-secure.entrypoints=https"
-      - "traefik.http.routers.sparqlgui-secure.rule=Host(`alpha.${HOST:?HOST environment is required}`) && PathPrefix(`/sparqlgui`)"
+      - "traefik.http.routers.sparqlgui-secure.rule=Host(`${HOST:?HOST environment is required}`) && PathPrefix(`/sparqlgui`)"
       - "traefik.http.routers.sparqlgui-secure.tls=true"
       - "traefik.http.routers.sparqlgui-secure.tls.certresolver=http"
       - "traefik.http.routers.sparqlgui-secure.service=sparqlgui"
