--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -87,6 +87,18 @@ services:
     networks:
       - traefik_default
     command: ["server", "/data"]
+  headless:
+    image: chromedp/headless-shell:latest
+    restart: unless-stopped
+    labels:
+      - "traefik.backend=headlesschrome"
+      - "traefik.port=9222"
+    ports:
+      - 9222:9222
+    environment:
+     - SERVICE_PORTS=9222
+    networks:
+      - traefik_default    
   mercantile:
     image: fils/mercantile:latest
     restart: unless-stopped
@@ -226,8 +238,8 @@ services:
     restart: unless-stopped
     #build: ./server
     environment:
-      - NODE_ENV=production
-      - S3ADDRESS=s3system:9000
+      - NODE_ENV=staging
+      - S3ADDRESS=oss.geocodes.earthcube.org
       - S3BUCKET=sites
       - S3PREFIX=alpha
       - DOMAIN=https://alpha.${HOST:?HOST environment varaible is required}/
@@ -261,7 +273,7 @@ services:
     restart: unless-stopped
     #build: ./client
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=staging
       - DOMAIN=https://alpha.${HOST:?HOST environment varaible is required}/
     labels:
       - "traefik.enable=true"
