--- a/env.example
+++ b/env.example
@@ -2,4 +2,5 @@ SERVER=beta
 HOST=geocodes.earthcube.org
 S3KEY=EXAMPLE
 S3SECRET=EXAMPLEKEY
-
+GITHUB_SECRET=OAUTH SECRET
+GITHUB_CLIENTID=OAUTH APP ID
