add notebook proxy

--- a/geocodes-compose.yaml
+++ b/geocodes-compose.yaml
@@ -135,18 +135,19 @@ services:
     restart: unless-stopped
     #build: ./client
     environment:
+      - AUTH_MODE=service
       - GITHUB_SECRET=${GITHUB_SECRET}
       - GITHUB_CLIENTID=${GITHUB_CLIENTID}
       - DOMAIN=https://${SERVER}.${HOST:?HOST environment varaible is required}/
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.nb.entrypoints=http"
-      - "traefik.http.routers.nb.priority=13"
+      - "traefik.http.routers.nb.priority=90"
       - "traefik.http.routers.nb.rule=Host(`${SERVER}.${HOST:?HOST environment varaible is required}`) && PathPrefix(`/notebook`)"
       - "traefik.http.middlewares.nb-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.nb.middlewares=nb-https-redirect"
       - "traefik.http.routers.nb-secure.entrypoints=https"
-      - "traefik.http.routers.nb-secure.priority=12"
+      - "traefik.http.routers.nb-secure.priority=90"
       - "traefik.http.routers.nb-secure.rule=Host(`${SERVER}.${HOST:?HOST environment is required}`) && PathPrefix(`/notebook`)"
       - "traefik.http.routers.nb-secure.tls=true"
       - "traefik.http.routers.nb-secure.tls.certresolver=http"
