--- a/env.example
+++ b/env.example
@@ -2,5 +2,12 @@ SERVER=beta
 HOST=geocodes.earthcube.org
 S3KEY=EXAMPLE
 S3SECRET=EXAMPLEKEY
+## for a service key for the gist notebook proxy
+# stored gists in each users account
 GITHUB_SECRET=OAUTH SECRET
 GITHUB_CLIENTID=OAUTH APP ID
+AUTH_MODE=service
+# a user api key.  All gists are stored in this users account
+#GITHUB_USER=mchenry
+#GITHUB_TOKEN=ghp_KEY
+#AUTH_MODE=apikey
